--- a/head.html
+++ b/head.html
@@ -2,7 +2,9 @@
 <script src="/scripts/aem.js"  type="module"></script>
 <script src="/scripts/scripts.js" defer type="module"></script>
 <link rel="stylesheet" defer href="/styles/styles.css"/>
-@font-face {
+
+<style>
+  @font-face {
     font-family: roboto;
     font-style: normal;
     font-weight: 700;
@@ -19,3 +21,6 @@
     src: url('../fonts/roboto-regular.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
+
+
+</style>
