--- a/head.html
+++ b/head.html
@@ -1,5 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<script src="/scripts/aem.js" async  type="module"></script>
+<script src="/scripts/aem.js"  type="module"></script>
 <script src="/scripts/scripts.js" defer type="module"></script>
 <link rel="stylesheet" defer href="/styles/styles.css"/>
 
