--- a/head.html
+++ b/head.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<script src="/scripts/aem.js"  defer type="module"></script>
-<script src="/scripts/scripts.js" defer type="module"></script>
+<script src="/scripts/aem.js"  async type="module"></script>
+<script src="/scripts/scripts.js" async type="module"></script>
 <link rel="stylesheet" defer href="/styles/styles.css"/>
 
 <style>
