api files added

--- a/tools/sidekick/library.html
+++ b/tools/sidekick/library.html
@@ -35,6 +35,7 @@
       library.config = {
         base: '/tools/sidekick/config.json',
         tags: '/tools/sidekick/plugins/tags/tags.js',
+        'api-test': '/tools/sidekick/plugins/api-test/api-test.js'
         
       }
 
